# app-template

./: .dockerignore  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.js  Dockerfile  README.md  TEST_SUITE_SUMMARY.md  app.json  electron-builder.json  eslint.config.js  jest.config.js  origami-cookies.txt  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
assets/icons/: README.md
data/cache/: .gitkeep
dist_electron/: SuperDangerous App Template-1.1.0-mac-arm64.dmg.blockmap  SuperDangerous App Template-1.1.0-mac-arm64.zip.blockmap  SuperDangerous App Template-1.1.0-mac-universal.dmg.blockmap  SuperDangerous App Template-1.1.0-mac-universal.zip.blockmap  builder-debug.yml  latest-mac.yml
docs/: API.md  APPS.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  PORT_ASSIGNMENTS.md  PURPOSE.md  README.md  STANDARDS-ACTIONS.md  STANDARDS-BEST-PRACTICES.md  STANDARDS-FRAMEWORK.md  STANDARDS-MATRIX.md  STANDARDS-REVISED.md  STANDARDS-VERIFIED.md  STANDARDS.md  TAURI_SETUP.md  TEST-REPORT.md
electron/: main.cjs  preload.cjs
scripts/: bundle-backend.mjs
src/: config.ts  index.ts  setupApp.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: data.ts  example.ts  upload.ts  users.ts  websocket.ts
tests/: README.md  index.test.ts  smoke.spec.ts
web/: index.html  package-lock.json  package.json  tailwind.config.js  test-console-errors.mjs  test-frontend.js  test-single-app.mjs  tsconfig.json  vite.config.ts
(+47 files in other folders)
